--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,8 @@
 </head>
 <body>
 
-<!-- START OF NAVBAR -->
-
-	<nav class="navbar navbar-inverse navbar-fixed-top">
+<!-- Start of Nav-bar -->
+    <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container-fluid">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -19,31 +18,26 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand" href="#">Ateneo School of Government</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Dashboard</a></li>
-            <li><a href="#">Settings</a></li>
-            <li><a href="#">Profile</a></li>
-            <li><a href="#">Help</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Notifications</a></li>
           </ul>
-          <form class="navbar-form navbar-right">
-            <input type="text" class="form-control" placeholder="Search...">
-          </form>
         </div>
       </div>
     </nav>
+<!-- End of Nav-bar -->
 
-<!-- END OF NAV BAR --> 
-
-
-	
-    <div class="container-fluid body-wrapper">
+    <div class="container-fluid">
       <div class="row">
 
-<!-- START OF SIDE BAR -->      	
+<!-- Start of Side-bar -->
         <div class="col-sm-3 col-md-2 sidebar">
+          <form id="search-bar">
+            	<input type="text" class="form-control" placeholder="Search...">
+          </form>
           <ul class="nav nav-sidebar">
             <li class="active"><a href="#">Overview <span class="sr-only">(current)</span></a></li>
             <li><a href="#">Reports</a></li>
@@ -63,22 +57,15 @@
             <li><a href="">Another nav item</a></li>
           </ul>
         </div>
-<!-- END OF SIDE BAR --> 
+<!-- End of Side-bar -->
 
-
-
-<!-- START OF MAIN BODY -->
-
-        <div class="col-sm-9 col-md-10 main">
+<!-- Start of Main body -->
+        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
         	<%= yield %>
         </div>
-
-<!-- END OF MAIN BODY -->
-     </div>
+      </div>
+<!-- End of Main body -->      
     </div>
-          
-
-
 
 </body>
 </html>
