--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,11 +3,17 @@
 
 .navbar {
 	background-color: #1C3F94;
+  height: 100px;
 }
 
 #search-bar {
 	padding-bottom: 20px;
 }
+
+.logo {
+  height: 80px;
+}
+
 
 
 
