--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Ateneo School of Government</a>
+          <a class="navbar-brand" href="#"><%= image_tag("ASOG-PMS logo 1.png", :alt => "logo", :class => "logo") %></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -30,7 +30,7 @@
     </nav>
 <!-- End of Nav-bar -->
 
-    <div class="container-fluid">
+    <div class="container-fluid body">
       <div class="row">
 
 <!-- Start of Side-bar -->
