added user icon

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#">Home</a></li>
             <li><a href="#">Notifications</a></li>
+            <li><a href="#"><%= image_tag("user icon.png", :alt => "user-icon", :class => "user-icon") %></a></li>
           </ul>
         </div>
       </div>
