--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,6 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import 'dropdowns-enhancement';
 
 .navbar {
 	background-color: #1C3F94;
@@ -18,6 +19,10 @@
   height: 50px;
 }
 
+#user-menu {
+  padding-right: 10px;
+  padding-top: 10px;
+}
 
 
 
