--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,15 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#">Home</a></li>
             <li><a href="#">Notifications</a></li>
-            <li><a href="#"><%= image_tag("user icon.png", :alt => "user-icon", :class => "user-icon") %></a></li>
+            <li>
+              <div class="dropdown" id="user-menu">
+                <div class="dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                  <%= image_tag("user icon.png", :alt => "user-icon", :class => "user-icon") %>
+                </div>
+                <ul class="dropdown-menu bullet pull-right" aria-labelledby="dropdownMenu1">
+                  <li> <a href="#">Something</a></li>
+                </ul>
+              </div></li>
           </ul>
         </div>
       </div>
