--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,6 +7,21 @@
   height: 100px;
 }
 
+.navbar-right {
+  height: 100px;
+}
+
+.navbar-right li {
+  height: 100%;
+  padding-top: 25px;
+}
+
+#user-icon {
+  padding-top: 15px;
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
 #search-bar {
 	padding-bottom: 20px;
 }
@@ -23,8 +38,6 @@
   padding-right: 10px;
   padding-top: 10px;
 }
-
-
 
 
 
@@ -104,7 +117,7 @@ body {
 .nav-sidebar > .active > a:hover,
 .nav-sidebar > .active > a:focus {
   color: #fff;
-  background-color: #428bca;
+  background-color: #1C3F94;
 }
 
 
