--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,6 +57,7 @@
           </form>
           <ul class="nav nav-sidebar">
             <li class="active"><a href="#">Overview <span class="sr-only">(current)</span></a></li>
+            <li><%= link_to 'Create new project', new_project_path %></li>
             <li><a href="#">Reports</a></li>
             <li><a href="#">Analytics</a></li>
             <li><a href="#">Export</a></li>
@@ -81,13 +82,8 @@
         	<%= yield %>
         </div>
       </div>
-<!-- End of Main body -->      
+<!-- End of Main body -->
     </div>
 
 </body>
 </html>
-
-
-
-
-
