--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -2,3 +2,4 @@
 <p>Find me in app/views/pages/index.html.erb</p>
 
 <button type="button" class="btn btn-primary">Primary</button>
+<%= link_to "Sign out", destroy_staff_session_path, :method => :delete %>
