Project and staf has_many through association

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,5 +1,10 @@
 <p id="notice"><%= notice %></p>
 
+<% @project.staffs.each do |staff| %>
+  <%= staff.first_name %>
+<% end %>
+
+
 <p>
   <strong>Project title:</strong>
   <%= @project.project_title %>
