--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -13,7 +13,7 @@
 <table class="table table-bordered project-profile-table">
   <tr>
     <th class="table-heading"> KPA Cluster </th>
-    <td > HEHEHEH </td>
+    <td > <%= @project.kpa_cluster %> </td>
   </tr>
 
   <tr>
