--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(@task) do |f| %>
+<%= simple_form_for @task, url: project_tasks_path(@project), method: :post do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
@@ -6,8 +6,9 @@
     <%= f.input :description %>
     <%= f.input :due_date %>
     <%= f.input :date_accomplished %>
-  </div>
 
+  </div>
+  
   <div class="form-actions">
     <%= f.button :submit %>
   </div>
