--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -20,5 +20,15 @@
   <%= @task.date_accomplished %>
 </p>
 
-<%= link_to 'Edit', edit_task_path(@task) %> |
-<%= link_to 'Back', tasks_path %>
+<p>
+	<strong>Project ID</strong>
+	<%= @project.id %>
+</p>
+
+<p>
+	<strong>Project Title:</strong>
+	<%= @project.project_title %>
+</p>
+
+<%= link_to 'Edit', edit_project_task_path(:id => @task.id, :project_id => params[:project_id]) %> |
+<%= link_to 'Back', project_tasks_path(:project_id => params[:project_id]) %>
