--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -73,4 +73,5 @@
 <% end %>
 
 <%= link_to 'Edit', edit_project_path(@project) %> |
-<%= link_to 'Back', projects_path %>
+<%= link_to 'Back to Home', projects_path %>
+<%= link_to 'Edit Work Plan',  new_project_task_path(@project)%>
