--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,5 +1,6 @@
 <h1>New Task</h1>
+<h1><%= @project.project_title %></h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Back', tasks_path %>
+<% @task.project_id = @project.id  %>
+ <%= link_to 'Back', project_tasks_path %>
