listing tasks path changes

--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -13,3 +13,4 @@
     <%= f.button :submit %>
   </div>
 <% end %>
+<input type="button" value="Add another text input" onClick="addInput('dynamicInput');">
