--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -20,9 +20,9 @@
         <td><%= task.description %></td>
         <td><%= task.due_date %></td>
         <td><%= task.date_accomplished %></td>
-        <td><%= link_to 'Show', task %></td>
-        <td><%= link_to 'Edit', edit_task_path(task) %></td>
-        <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', project_task_path(:id => task.id, :project_id => params[:project_id]) %></td>
+        <td><%= link_to 'Edit', edit_project_task_path(:id => task.id, :project_id => params[:project_id]) %></td>
+        <td><%= link_to 'Destroy', project_task_path(:id => task.id, :project_id => params[:project_id]), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -30,4 +30,4 @@
 
 <br>
 
-<%= link_to 'New Task', new_task_path %>
+<%= link_to 'New Task', new_project_task_path(:project_id => params[:project_id]) %>
