--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -6,9 +6,9 @@
     <%= f.input :description %>
     <%= f.input :due_date %>
     <%= f.input :date_accomplished %>
-
+    <%= f.hidden_field  :project_id, :value => params[:project_id] %>
   </div>
-  
+
   <div class="form-actions">
     <%= f.button :submit %>
   </div>
