--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,20 +1,23 @@
-<%= simple_form_for(@project) do |f| %>
-  <%= f.error_notification %>
+<div class="new-project-form">
+  <%= simple_form_for(@project) do |f| %>
+    <%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.input :project_title %>
-    <%= f.input :project_acronym %>
-    <%= f.input :project_director %>
-    <%= f.input :funding_agency %>
-    <%= f.input :start_date %>
-    <%= f.input :end_date %>
-    <%= f.input :total_budget %>
-    <%= f.input :total_amount_spent %>
-    <%= f.input :account_number %>
-    <%= f.association :kpa_cluster, include_blank: false, label_method: :kpa_title  %>
-  </div>
+    <div class="form-inputs">
+      <%= f.association :kpa_cluster, include_blank: false, label_method: :kpa_title  %>
+      <%= f.input :project_director %>
+      <%= f.input :project_title %>
+      <%= f.input :project_acronym %>
+      <%= f.input :funding_agency %>
+      <%= f.input :account_number %>
+      <%= f.input :total_budget %>
+      <%= f.input :total_amount_spent %>
+      <%= f.input :start_date %>
+      <%= f.input :end_date %>
+    </div>
 
-  <div class="form-actions">
-    <%= f.button :submit %>
-  </div>
-<% end %>
+    <div class="form-actions">
+      <%= link_to 'Back', projects_path, class: "btn btn-danger" %>
+      <%= f.button :submit, class: "btn-primary" %>
+    </div>
+  <% end %>
+</div>
