--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Project</h1>
+<h1>Create New Project</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', projects_path %>
+<!-- <%= link_to 'Back', projects_path, class: "btn btn-danger" %> -->
