--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,16 +1,21 @@
-<%= simple_form_for @task, url: project_tasks_path(@project), method: :post do |f| %>
-  <%= f.error_notification %>
+<div class="new-task-form">
 
-  <div class="form-inputs">
-    <%= f.input :task_title %>
-    <%= f.input :description %>
-    <%= f.input :due_date %>
-    <%= f.input :date_accomplished %>
-    <%= f.hidden_field  :project_id, :value => params[:project_id] %>
-  </div>
+  <%= simple_form_for @task, url: project_tasks_path(@project), method: :post do |f| %>
+    <%= f.error_notification %>
 
-  <div class="form-actions">
-    <%= f.button :submit %>
-  </div>
-<% end %>
-<input type="button" value="Add another text input" onClick="addInput('dynamicInput');">
+    <div class="form-inputs">
+      <%= f.input :task_title %>
+      <%= f.input :description %>
+      <%= f.input :due_date %>
+      <%= f.input :date_accomplished %>
+      <%= f.hidden_field  :project_id, :value => params[:project_id] %>
+    </div>
+
+    <div class="form-actions">
+       <%= link_to 'Back', project_tasks_path, class: "btn btn-danger" %>
+      <%= f.button :submit, class: "btn btn-primary" %>
+    </div>
+  <% end %>
+  <input type="button" value="Add another text input" onClick="addInput('dynamicInput');">
+
+</div>
