--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,6 +1,8 @@
-<h1>New Task</h1>
-<h1><%= @project.project_title %></h1>
+<h1>Add to Work Plan</h1>
+
+<h2><%= @project.project_title %></h2>
 
 <%= render 'form' %>
+
 <% @task.project_id = @project.id  %>
- <%= link_to 'Back', project_tasks_path %>
+ <!-- <%= link_to 'Back', project_tasks_path %> -->
