Create new users to a project working. SANA

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -122,7 +122,6 @@ body {
   background-color: #1C3F94;
 }
 
-
 /*
  * Main content
  */
@@ -159,4 +158,12 @@ body {
 .placeholder img {
   display: inline-block;
   border-radius: 50%;
+}
+
+/*Registration Styles*/
+
+.new-registration-form {
+
+
+
 }
