--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -2,20 +2,73 @@
   <%= simple_form_for(@project) do |f| %>
     <%= f.error_notification %>
 
-    <div class="form-inputs">
-      <%= f.association :kpa_cluster, include_blank: false, label_method: :kpa_title  %>
-      <%= f.input :project_director %>
-      <%= f.input :project_title %>
-      <%= f.input :project_acronym %>
-      <%= f.input :funding_agency %>
-      <%= f.input :account_number %>
-      <%= f.input :total_budget %>
-      <%= f.input :total_amount_spent %>
-      <%= f.input :start_date %>
-      <%= f.input :end_date %>
-    </div>
+    <div class="form-inputs row">
 
-    <div class="form-actions">
+      <div class="row">
+        <div class="col-md-6">
+          <%= f.association :kpa_cluster, include_blank: false, label_method: :kpa_title  %>
+        </div>
+        <div class="col-md-6">
+          <%= f.input :project_director %>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-6">
+          <%= f.input :project_title %>
+        </div>
+        <div class="col-md-6">
+          <%= f.input :project_acronym %>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-6">
+            <%= f.input :account_number %>
+        </div>
+        <div class="col-md-6">
+            <%= f.input :funding_agency %>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-6">
+          <%= f.input :total_budget %>
+        </div>
+        <div class="col-md-6">
+          <%= f.input :total_amount_spent %>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-6">
+          <%= f.input :total_budget %>
+        </div>
+        <div class="col-md-6">
+          <%= f.input :total_amount_spent %>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-6">
+          <div class="row">
+            <div class="col-md-6">
+                <%= f.input :start_date %>
+            </div>
+            <div class="col-md-6">
+                <%= f.input :end_date %>
+            </div>
+          </div>
+
+        </div>
+        <div class="col-md-6">
+
+        </div>
+      </div>
+
+    </div>
+    <br>
+    <div class="form-actions row">
       <%= link_to 'Back', projects_path, class: "btn btn-danger" %>
       <%= f.button :submit, class: "btn-primary" %>
     </div>
