--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -19,13 +19,10 @@
           <%= f.input :email, required: true, autofocus: true %>
           <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
           <%= f.input :password_confirmation, required: true %>
+          <%= f.association :projects, :input_html => { :size => '3'}  %>
           <%= f.input :contract_expiration_date, required: true %>
         </div>
-
       </div>
-
-
-      <%= f.association :projects,  as: :select %>
     </div>
 
     <div class="form-actions row">
