nav bar pop out

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -81,6 +81,11 @@ body {
   border: 0;
 }
 
+.dropdown-item {
+  margin-left: 20px;
+  
+}
+
 /*
  * Sidebar
  */
@@ -167,3 +172,4 @@ body {
 
 
 }
+
