--- a/app/assets/stylesheets/items.css.scss
+++ b/app/assets/stylesheets/items.css.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the Items controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+// INDEX TASK STYLING
+
+.index-items {
+  thead {
+    background: #1C3F94;
+    color: white;
+  }
+}
