--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,16 +1,24 @@
-<%= simple_form_for(@item) do |f| %>
+<%= simple_form_for @item, url: project_items_path(@project), method: :post do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :item_title %>
-    <%= f.input :budget %>
-    <%= f.input :amount_spent %>
+    <div class="row">
+      <div class="col-md-6">
+        <%= f.input :item_title %>
+      </div>
+      <div class="col-md-6">
+        <%= f.input :budget %>
+      </div>
+    </div>
+
+    <%= f.hidden_field  :project_id, :value => params[:project_id] %>
+    <!-- <%= f.input :amount_spent %>
     <%= f.input :balance_left %>
     <%= f.input :percentage_spent %>
-    <%= f.input :comments %>
+    <%= f.input :comments %> -->
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit %>
+    <%= f.button :submit, class: "btn btn-primary" %>
   </div>
 <% end %>
