--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @item %> |
-<%= link_to 'Back', items_path %>
+
+<%= link_to 'Back', project_items_path(:project_id => params[:project_id]) %>
