--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -30,5 +30,5 @@
   <%= @item.comments %>
 </p>
 
-<%= link_to 'Edit', edit_item_path(@item) %> |
-<%= link_to 'Back', items_path %>
+<%= link_to 'Edit', edit_project_item_path(:id => @item.id, :project_id => params[:project_id]) %> |
+<%= link_to 'Back', project_items_path(:project_id => params[:project_id]) %>
