--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,6 +42,7 @@
     <div class="container-fluid body">
       <div class="row">
 
+<% if staff_signed_in? %>
 <!-- Start of Side-bar -->
         <div class="col-sm-3 col-md-2 sidebar">
           <form id="search-bar">
@@ -58,7 +59,7 @@
           <ul class="nav nav-sidebar">
             <li class="active"><a href="#">Overview <span class="sr-only">(current)</span></a></li>
             <li><%= link_to 'Create new project', new_project_path %></li>
-            <li><a href="#">Reports</a></li>
+            <li></li>
             <li><a href="#">Analytics</a></li>
             <li><a href="#">Export</a></li>
           </ul>
@@ -82,6 +83,14 @@
         	<%= yield %>
         </div>
       </div>
+
+<% else %>
+  <div class="col-sm-12  col-md-12  main">
+    <%= yield %>
+  </div>
+<% end %>
+
+
 <!-- End of Main body -->
     </div>
 
