--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -20,7 +20,16 @@
     color: white;
     text-align: center;
     padding-top: 30px;
+  }
 
+  .project-title a {
+    color: black;
+  }
+
+  .project-title a:hover {
+    background: none;
+    text-decoration: none;
+    color: #1C3F94;
   }
 
 }
@@ -30,21 +39,18 @@
 }
 
 
-
-
 // NEW PROJECT STYLING
 .new-project-form {
-
   .btn {
   	color: white !important;
   }
-
 }
+
+
 
 // SHOW PROJECT STYLING
 
 .project-profile-table {
-
   // width: 70% !important;
 
   .table-heading {
@@ -57,5 +63,4 @@
     width: 70%;
     text-align: center;
   }
-
 }
