--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,7 +1,7 @@
 <% if current_staff.admin? %>
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Projects</h1>
+<h1>All Projects</h1><br>
 
 <div class="row">
   <% @projects.each do |project| %>
@@ -14,7 +14,7 @@
             </div>
           </div>
           <div class="col-xs-9">
-            <h4><%= link_to project.project_title, project %></h4>
+            <h4 class="project-title"><%= link_to project.project_title, project %></h4>
             <h5><%= project.project_director %></h5>
           </div>
         </div>
