--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -47,6 +47,13 @@
         </div>
       </div>
 
+      <div class="row">
+        <div class="col-md-6">
+          <%= f.label :attachment, label: 'Upload Project Summary' %>
+          <%= f.file_field :attachment, label: 'Upload Project Summary'%>
+        </div>
+      </div>
+
     </div>
     <br>
     <div class="form-actions row">
