--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,17 +24,22 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#">Home</a></li>
             <li><a href="#">Notifications</a></li>
+            <% if staff_signed_in? %>
             <li id="user-icon">
               <div class="dropdown" id="user-menu">
+
                 <div class="dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                   <%= image_tag("user icon.png", :alt => "user-icon", :class => "user-icon") %>
                 </div>
+                
                 <ul class="dropdown-menu bullet pull-right" aria-labelledby="dropdownMenu1">
                   <li class="dropdown-item"> <%= current_staff.first_name %> <%= current_staff.last_name %> </li>
                   <li class="dropdown-item"> View Profile </li>
                   <li> <%= link_to "Log Out", destroy_staff_session_path, method: :delete%></li>
                 </ul>
+                
               </div></li>
+              <% end %>
           </ul>
         </div>
       </div>
