--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -42,13 +42,6 @@
 }
 
 
-
-
-
-
-
-
-
 /***************************************
  * CUSTOM CSS FOR SIDE-BAR AND NAV BAR *
  **************************************/
@@ -82,8 +75,8 @@ body {
 }
 
 .dropdown-item {
-  margin-left: 20px;
-
+  text-align: center;
+	padding-top: 10px !important;
 }
 
 /*
@@ -165,12 +158,21 @@ body {
   border-radius: 50%;
 }
 
-/*Registration Styles*/
+/* Sessions New Styles */
 
-.new-registration-form {
+.new-sessions-form {
+	width: 65%;
+	margin: auto;
+	margin-top: 65px;
+	border: 1px solid #eee;
+	border-radius: 5px;
+	padding: 10px;
 
-
-
+	h2 {
+		background: #1C3F94;
+		color: white;
+		padding: 3px;
+	}
 }
 
 
@@ -215,4 +217,16 @@ body {
 		text-align: center;
 		font-weight: lighter;
 	}
+}
+
+
+.footer {
+	
+	width:100%;
+	height:30px;
+	position:absolute;
+	bottom:0;
+	left:0;
+	color: black;
+	text-align: right;
 }
