--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -71,8 +71,8 @@
             <li><a href="#">Export</a></li>
           </ul>
           <ul class="nav nav-sidebar">
-            <li><a href="">Add New Staff</a></li>
-            <li><a href="">Add New Admin</a></li>
+            <li><%= link_to "Add New Staff", new_staff_registration_path %></li>
+            
             <li><a href="">Disable User</a></li>
             <li><a href="">Another nav item</a></li>
             <li><a href="">More navigation</a></li>
