--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -69,7 +69,7 @@
           </ul>
 
           <ul class="nav nav-sidebar">
-            <li><a href="">Add New Staff</a></li>
+            <li><%= link_to 'Add new staff', new_staff_registration_path %></li>
             <li><a href="">Add New Admin</a></li>
             <li><a href="">Disable User</a></li>
           </ul>
