udate expenditure mej working mej

--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -47,7 +47,6 @@
 }
 
 
-
 // SHOW PROJECT STYLING
 
 .project-profile-table {
@@ -63,4 +62,14 @@
     width: 70%;
     text-align: center;
   }
+}
+
+.download-btn {
+  background: #1C3F94;
+  color: white !important;
+}
+
+.download-btn:hover {
+  background: #1C3F94;
+  color: white !important;
 }
