--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,6 +4,10 @@
 @import "bootstrap";
 @import 'dropdowns-enhancement';
 
+body {
+	background-color: #f4f4f4;
+}
+
 .navbar {
 	background-color: #1C3F94;
   height: 100px;
