--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -4,6 +4,12 @@
 
 // INDEX PROJECT STYLING
 
+.index-items {
+  thead tr th {
+    text-align: center;
+  }
+}
+
 .project-box {
   height: 100px;
   background: #eeeeee;
