--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -6,13 +6,13 @@
     <td class="project-active"><a href="#"> Profile <a></td>
     <td> <%= link_to 'Work Plan', project_tasks_path(@project) %> </td>
     <td> <%= link_to 'Expenditure', project_items_path(@project) %> </td>
-    <td> Pogress </td>
+    <td> Progress </td>
     <td> Options </td>
   </tr>
 </table>
 
 
-<h1 class="hey">Project Profile</h1>
+
 
 
 <h2> <%= @project.project_title %> </h2>
