--- a/app/views/records/edit.html.erb
+++ b/app/views/records/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @record %> |
-<%= link_to 'Back', records_path %>
+<!-- <%= link_to 'Show', @record %> |
+<%= link_to 'Back', records_path %> -->
