--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -5,13 +5,12 @@
     <td> <%= link_to 'Profile', project_path(@project) %></td>
     <td class="project-active"><a href="#"> Work Plan </a></td>
     <td> <%= link_to 'Expenditure', project_items_path(@project) %> </td>
-    <td> Pogress </td>
+    <td> Progress </td>
     <td> Options </td>
   </tr>
 </table>
 
 <div class="index-tasks">
-  <h1>Project Work Plan</h1>
   <h2><%= @project.project_title%></h2>
   <table class="table">
     <thead>
@@ -39,7 +38,7 @@
     </tbody>
   </table>
   <br>
-  
+
   <%= link_to 'New Task', new_project_task_path(:project_id => params[:project_id]) %>
 
 </div>
