--- a/app/views/records/_form.html.erb
+++ b/app/views/records/_form.html.erb
@@ -1,9 +1,11 @@
-<%= simple_form_for(@record) do |f| %>
+<%= simple_form_for @record, url: project_item_records_path(@project, @item), method: :post do |f| %>
+
   <%= f.error_notification %>
 
   <div class="form-inputs">
     <%= f.input :expenditure %>
-    <%= f.association :Item %>
+    <%= f.input :comments %>
+    <%= f.hidden_field  :item_id, :value => params[:item_id] %>
   </div>
 
   <div class="form-actions">
