--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -15,10 +15,10 @@
     <% @records.each do |record| %>
       <tr>
         <td><%= record.expenditure %></td>
-        <td><%= record.Item %></td>
-        <td><%= link_to 'Show', record %></td>
-        <td><%= link_to 'Edit', edit_record_path(record) %></td>
-        <td><%= link_to 'Destroy', record, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= record.item %></td>
+        <td><%= link_to 'Show', project_item_records_path(params[:project_id], params[:item_id]) %></td>
+        <td><%= link_to 'Edit', edit_project_item_record_path(params[:project_id], params[:item_id], @records) %></td>
+
       </tr>
     <% end %>
   </tbody>
@@ -26,4 +26,4 @@
 
 <br>
 
-<%= link_to 'New Record', new_record_path %>
+<%= link_to 'New Record', new_project_item_record_path %>
