--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -12,6 +12,7 @@
     </div>
 
     <%= f.hidden_field  :project_id, :value => params[:project_id] %>
+    <%= f.hidden_field :amount_spent,:value => 0 %>
   </div>
 
   <div class="form-actions">
